fix broken image link & sidebar chapter spacing

--- a/_theme/_sass/mpp-main.scss
+++ b/_theme/_sass/mpp-main.scss
@@ -106,6 +106,9 @@ body {
             font-size: .9em;
             margin-right: 1em;
           }
+          p {
+            margin: 1em 0;
+          }
           ol > li {
             position: relative;
             &.current > a {
